[workspace]
resolver = "2"
members = ["core", "platform", "ui"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
keyring = "3"
thiserror = "2"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
urlencoding = "2"
open = "5"
