[package]
name = "runeroster-core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
keyring = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
