[package]
name = "runeroster"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
runeroster-core = { path = "../core" }
runeroster-platform = { path = "../platform" }
tokio = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
open = { workspace = true }
iced = { version = "0.14", features = ["tokio", "image"] }
